matches facet changes

--- a/src/app/toolbar/settings/settingsToolbar.html
+++ b/src/app/toolbar/settings/settingsToolbar.html
@@ -21,7 +21,7 @@
 						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
 						<li><a ui-sref="app">HOME</a></li>
 						<li><a ui-sref="search">SEARCH</a></li>
-						<li><a ui-sref="matches">MATCHES</a></li>
+						<li ><a ui-sref="matches({type:'newMatches'})" target="_blank">MATCHES</a></li>
 						<li><a ui-sref="messages">MESSAGES</a></li>
 						<li class="dropdown dropdown-user ">
 							<a href="javascript:;"  class="dropdown-toggle a-drop-link" data-toggle="dropdown"
