--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -21,7 +21,7 @@
                     <ul class="tool-link">
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="app">MY HOME</a></li>
-                        <li ><a ui-sref="matches" target="_blank">MATCHES</a></li>
+                        <li ><a ui-sref="matches({type:'newMatches'})" target="_blank">MATCHES</a></li>
                         <li><a ui-sref="search" target="_blank">SEARCH</a></li>
                         <li><a ui-sref="recomendation" >DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
