--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -111,14 +111,16 @@
 				<!-- DOC: Remove "hide" class to enable the page header actions -->
 				<div class="main-heading-actions">
 					<ul class="main-tool-link uppercase">
-						<li><a ng-class="{ activetoolbar: mainlink == 'newMatches' }" ng-click="newMatches()" >New matches</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='notYetViewed' }" ng-click="notYetViewed()">Yet to be viewed</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='viewed' }"
-							   ng-click="viewed()" >Viewed and not contacted</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink == 'newMatches' }"
+							   ui-sref="matches({type:'newMatches'})" >New matches</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='yet_to_be_viewed' }"
+							   ui-sref="matches({type:'yet_to_be_viewed'})" ng-click="notYetViewed()">Yet to be viewed</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='viewed_not_contacted' }"
+							   ui-sref="matches({type:'viewed_not_contacted'})" >Viewed and not contacted</a></li>
 						<li><a ng-class="{ activetoolbar: mainlink =='shortlisted' }"
-							   ng-click="shortlisted()" >Shortlisted</a></li>
-						<li><a ng-class="{ activetoolbar: mainlink =='mutalmatches' }"
-							   ng-click="mutalmatches()" >Who viewed my profile</a></li>
+							   ui-sref="matches({type:'shortlisted'})" >Shortlisted</a></li>
+						<li><a ng-class="{ activetoolbar: mainlink =='viewed_my_profile' }"
+							   ui-sref="matches({type:'viewed_my_profile'})" >Who viewed my profile</a></li>
 						<!--<li><a ng-class="{ activetoolbar: mainlink =='more' }" ng-click="more()" >More </a></li>-->
 					</ul>
 				</div>
