--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -19,7 +19,7 @@
 				<div class="page-actions">
 					<ul class="tool-link">
 						<li style="background-color: #00c29e"><a ui-sref="app">HOME</a></li>
-						<li><a ui-sref="matches">MATCHES</a></li>
+						<li ><a ui-sref="matches({type:'newMatches'})" target="_blank">MATCHES</a></li>
 						<li><a ui-sref="search">SEARCH</a></li>
 						<li><a ui-sref="messages">INBOX</a></li>
 						<li class="dropdown dropdown-user ">
