--- a/src/app/toolbar/search/searchtoolbar.html
+++ b/src/app/toolbar/search/searchtoolbar.html
@@ -20,7 +20,7 @@
 					<ul class="tool-link">
 						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
 						<li><a ui-sref="app">MY HOME</a></li>
-						<li><a ui-sref="matches">MATCHES</a></li>
+						<li ><a ui-sref="matches({type:'newMatches'})" target="_blank">MATCHES</a></li>
 						<li style="background-color: #00c29e"><a ui-sref="search">SEARCH</a></li>
 						<li><a href="#about">DAILY MATCHES</a></li>
 						<li><a ui-sref="messages">MESSAGES</a></li>
