matches facet changes

--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -1163,15 +1163,15 @@
 </div>
 <script type="text/ng-template" id="myModalContent.html">
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-title" style="color: #4cbcac;">
-            {{$ctrl.items.header}}
+        <h4 class="modal-title" id="modal-title" style="color: #4cbcac;" >
+            <b>{{$ctrl.items.header}}</b>
             <button class=" pull-right btn btn-circle btn-icon-only default" type="button" ng-click="$ctrl.cancel()"><i
                     class="fa fa-times"></i></button>
         </h4>
     </div>
 
-    <div class="modal-body">
-        <div class="row" style="margin: 20px">
+    <div class="modal-body" ng-if="$ctrl.items.showContent">
+        <div class="row" style="margin: 20px" >
             <div class="col-md-4">
                 <img ng-if="$ctrl.items.img.length > 0" style="height: 90px;width: 90px;border-radius: 55% !important;"
                      ng-src="{{$ctrl.items.img[0].image}}" ng-click="$ctrl.vieImg(img.image)"/>
@@ -1193,8 +1193,8 @@
 
             </div>
         </div>
-        <div class="modal-footer">
-            <div class="row">
+        <div class="modal-footer" ng-if="$ctrl.items.showContent">
+            <div class="row" >
                 <div class="col-md-12" style="color: grey">
                     To know more about packages call now 9999999999
                 </div>
