--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -5,9 +5,9 @@
 
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
-                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                            <!--<li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
                                     <span class="title"><b>Inbox</b></span>
-                            </li>
+                            </li>-->
                             <!--<li   class="nav-item " >-->
                                 <!--<a  class="nav-link ">-->
                                     <!--<span >ALL</span>-->
