--- a/src/app/navigation/message/sent/sentNavigation.html
+++ b/src/app/navigation/message/sent/sentNavigation.html
@@ -5,9 +5,9 @@
 
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
-                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
+                            <!--<li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
                                     <span class="title"><b>Sent all</b></span>
-                            </li>
+                            </li>-->
                             <li  ng-class="{ activateSettingNavBar: isActive('/messages/sent')}" class="nav-item " >
                                 <a ui-sref="messages.sent" class="nav-link ">
                                     <span >SENT</span>
