matches facet changes

--- a/src/app/main/message/communication/communication.html
+++ b/src/app/main/message/communication/communication.html
@@ -21,7 +21,7 @@
                         <div class="col-md-9">
                             <div class="row">
                                 <div class="col-md-5"><label class="message-name-text"><a
-                                        ng-click="viewProfile(view.user.id_people)">{{view.user.name}}</a></label>
+                                        ng-click="viewProfileSection(view.user.id_people)">{{view.user.name}}</a></label>
                                     &nbsp;<label
                                             class="style-cls">({{view.user.id_people}})</label>
                                 </div>
