--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light border-rounded">
+                    <div class="portlet light border-rounded" id="basicdetails">
                         <div class="portlet-title">
                             <div class="caption ">
                                 <span class=" uppercase"><i class=" fa fa-file-text icon-color"></i> &nbsp;Basic details</span>
@@ -934,7 +934,7 @@
 
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light border-rounded">
+                    <div class="portlet light border-rounded" id="prof_info">
                         <div class="portlet-title">
                             <div class="caption ">
                                 <span class=" uppercase"><i class=" fa fa-mortar-board icon-color"></i> &nbsp;Professional Information</span>
@@ -1122,7 +1122,7 @@
                 </div>
                 <div class="col-md-12 " >
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light border-rounded">
+                    <div class="portlet light border-rounded" id="family_details">
                         <div class="portlet-title">
                             <div class="caption ">
                                 <span class=" uppercase"><i
