--- a/src/app/main/profile/contactdetails/contactDetails.html
+++ b/src/app/main/profile/contactdetails/contactDetails.html
@@ -26,6 +26,71 @@
                             </div>
                         </div>
                         <div class="portlet-body form">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="font-weight ">Mobile</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.mobile">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="font-weight ">Email</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="font-weight ">Parent Contact Details</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.parent_mobile">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12" style="font-weight: 600;font-size: large">
+                                    Contact Reference
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label class="font-weight ">Whom to Contact</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.whom_to_contact">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="font-weight ">Contact Person Name</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.contact_person">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="font-weight ">Available Time to call</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.available_time">
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="font-weight ">Comments</label>
+                                        <input type="text" class="form-control  input-rounded"
+                                               ng-model="contact.comments">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="actions" style="text-align: right">
+
+                                        <button type="button" ng-click="saveContactDetails()"
+                                                class=" btn btn-default red input-rounded "
+                                                style="color:#ffffea">
+                                            Save
+                                        </button>
+
+
+                                    </div>
+                                </div>
+                            </div>
+
 
                         </div>
                     </div>
@@ -39,8 +104,6 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BREADCRUMB -->
-
-
 
 
         <!-- END PAGE BASE CONTENT -->
