--- a/src/app/main/payment/payment.html
+++ b/src/app/main/payment/payment.html
@@ -40,7 +40,7 @@
                                                                     <div class="row" style="text-align: center">
                                                                         <div class="col-md-12 col-sm-12 col-xs-12 text-center margin-top-30">
                                                                             <button type="button"
-                                                                                    class="btn  btn-outline"
+                                                                                    class="btn  btn-outline" style="font-weight: bold;"
                                                                                     ng-class="{'price-button': selectPackageDetails == 'classic3','price-button-light': selectPackageDetails != 'classic3'}">
                                                                                 Classic
                                                                             </button>
@@ -62,7 +62,7 @@
                                                                     <div class="row" style="text-align: center">
                                                                         <div class="col-md-12 col-sm-12 col-xs-12 pull-left  margin-top-30">
                                                                             <button type="button"
-                                                                                    class="btn btn-outline"
+                                                                                    class="btn btn-outline" style="font-weight: bold;"
                                                                                     ng-class="{'price-button': selectPackageDetails == 'classic3Adv','price-button-light': selectPackageDetails != 'classic3Adv'}">
                                                                                 Classic Advantage
                                                                             </button>
@@ -116,7 +116,7 @@
                                                                     <div class="row" style="text-align: center">
                                                                         <div class="col-md-12 col-sm-12 col-xs-12 text-center margin-top-30">
                                                                             <button type="button"
-                                                                                    class="btn btn-outline "
+                                                                                    class="btn btn-outline " style="font-weight: bold;"
                                                                                     ng-class="{'price-button': selectPackageDetails == 'classic6','price-button-light': selectPackageDetails != 'classic6'}">
                                                                                 Classic
                                                                             </button>
@@ -138,7 +138,7 @@
                                                                     <div class="row" style="text-align: center">
                                                                         <div class="col-md-12 col-sm-12 col-xs-12 pull-left  margin-top-30">
                                                                             <button type="button"
-                                                                                    class="btn btn-outline "
+                                                                                    class="btn btn-outline " style="font-weight: bold;"
                                                                                     ng-class="{'price-button': selectPackageDetails == 'classic6Adv','price-button-light': selectPackageDetails != 'classic6Adv'}">
                                                                                 Classic Advantage
                                                                             </button>
@@ -269,7 +269,7 @@
                                                             <div class="row" style="text-align: center">
                                                                 <div class="col-md-12 col-sm-12 col-xs-12 pull-left  margin-top-30">
                                                                     <button type="button"
-                                                                            class="btn btn-outline "
+                                                                            class="btn btn-outline " style="font-weight: bold"
                                                                             ng-class="{'price-button': selectPackageDetails == 'flexible1','price-button-light': selectPackageDetails != 'flexible1'}">
                                                                         Flexiable
                                                                     </button>
