--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -114,7 +114,7 @@
 				<div class="main-heading-actions">
 					<ul class="main-tool-link uppercase">
 						<li><a ng-class="{ activetoolbar: isActive('/profile')}" ui-sref="profile">Edit Profile</a></li>
-						<li><a ng-class="{ activetoolbar: isActive('/profile/contact')}" ui-sref="profile.contact">Contact Details</a></li>
+						<li><a ng-class="{ activetoolbar: isActive('/profile/profile/contact')}" ui-sref="profile.contact">Contact Details</a></li>
 						<!--<li><a ng-class="{ activetoolbar: isActive('/profile/managephotos')}" ui-sref="profile.photos">Manage Photos</a></li>-->
 					</ul>
 				</div>
