--- a/src/app/main/payment/payment.css
+++ b/src/app/main/payment/payment.css
@@ -61,7 +61,7 @@
 
 .make-payment-color{
     height:45px!important;
-    background-color: #e84215 !important;
+    background-color: #e7505a !important;
     color:white!important;
 }
 
