--- a/src/app/main/payment/payment.html
+++ b/src/app/main/payment/payment.html
@@ -217,7 +217,7 @@
 
                                             </div>
                                             <div class="col-md-3 col-sm-3 col-xs-3 margin-top-15 "
-                                                 style="text-align:center;">
+                                                 style="text-align:center;" ng-if="offer.view_horoscope_of_members == 'yes'">
                                                                     <span style="color: #00AC8D;font-size:30px"
                                                                             ><i class="icon-globe"></i></span>
 
@@ -339,13 +339,13 @@
 
                                                                 <div class="row ">
                                                                     <div class="col-md-12 col-sm-12 col-xs-12 ">
-                                                                        <span style="font-size: 14px">Access <b>{{offer.verifiedMobile}}</b> verified mobile numbers</span>
+                                                                        <span style="font-size: 14px">Access <b>{{offer.verifiedMobile}} 1111{{offer.view_horoscope_of_members}}</b> verified mobile numbers</span>
                                                                     </div>
                                                                 </div>
 
                                                             </div>
                                                             <div class="col-md-3 col-sm-3 col-xs-3 margin-top-15 "
-                                                                 style="text-align:center;">
+                                                                 style="text-align:center;" ng-if="offer.view_horoscope_of_members == 'yes'">
                                                                     <span style="color: #00AC8D;font-size:30px"
                                                                             ><i class="icon-globe"></i></span>
 
