--- a/src/app/main/profile/contactdetails/contactDetails.html
+++ b/src/app/main/profile/contactdetails/contactDetails.html
@@ -2,7 +2,7 @@
     <!-- BEGIN CONTENT BODY -->
     <div class="page-content">
         <!-- BEGIN PAGE HEAD-->
-        <div class="page-head">
+        <div class="page-head" style="margin-left: 20px">
 
             <!-- BEGIN PAGE BASE CONTENT -->
 
@@ -30,7 +30,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label class="font-weight ">Mobile</label>
-                                        <input type="text" class="form-control  input-rounded"
+                                        <input type="text" numbers-only maxlength="10" class="form-control  input-rounded"
                                                ng-model="contact.mobile">
                                     </div>
                                     <div class="form-group">
@@ -40,7 +40,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label class="font-weight ">Parent Contact Details</label>
-                                        <input type="text" class="form-control  input-rounded"
+                                        <input type="text" numbers-only maxlength="10" class="form-control  input-rounded"
                                                ng-model="contact.parent_mobile">
                                     </div>
                                 </div>
