send mail template added

--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -42,7 +42,7 @@
                                     </a>
                                     <ul class="dropdown-menu pull-right">
                                         <li>
-                                            <a href="javascript:;">
+                                            <a ng-click="sendMail()">
                                                 <i class="fa fa-send"></i> Send Mail </a>
                                         </li>
                                         <li>
