payment promo page added

--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -143,7 +143,7 @@
                                             class="hidden-sm hidden-xs"> Contact Details</span>
                                     </div>
                                     <div class="col-md-3 col-sm-3 col-xs-3"
-                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer">
+                                         style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer" ng-click="chatNowButton()">
                                         <i
                                                 class="fa fa-commenting-o"></i> <span class="hidden-sm hidden-xs">  Chat now</span>
                                     </div>
@@ -165,7 +165,7 @@
                                         <i class="fa fa-phone"></i> Call now
                                     </div>
                                     <div class="col-md-4"
-                                         style="padding: 20px;cursor:pointer;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                         style="padding: 20px;cursor:pointer;border: 1px solid #eef1f5;background-color: gainsboro" ng-click="chatNowButton()"><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
                                     <div class="col-md-4"
