--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -133,7 +133,7 @@
                                          style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer">
                                         <i class="fa fa-phone"></i> <span class="hidden-sm hidden-xs"> Contact Details</span>
                                     </div>
-                                    <div class="col-md-3 col-sm-3 col-xs-3"
+                                    <div class="col-md-3 col-sm-3 col-xs-3" ng-click="chatNowButton()"
                                          style="height:60px;font-size:14px;padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;cursor: pointer"><i
                                             class="fa fa-commenting-o"></i> <span class="hidden-sm hidden-xs">  Chat now</span>
                                     </div>
@@ -151,7 +151,7 @@
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
                                         <i class="fa fa-phone"></i> Call now
                                     </div>
-                                    <div class="col-md-4"
+                                    <div class="col-md-4" ng-click="chatNowButton()"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
