--- a/src/app/main/profile/contactdetails/contactDetails.html
+++ b/src/app/main/profile/contactdetails/contactDetails.html
@@ -7,9 +7,10 @@
             <!-- BEGIN PAGE BASE CONTENT -->
 
             <div class="row">
-                <div class="col-md-12 ">
+               <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light bordered">
+
                         <div class="portlet-title">
                             <div class="caption ">
                                 <!--<i class="icon-settings font-red-sunglo"></i>-->
@@ -26,6 +27,9 @@
                             </div>
                         </div>
                         <div class="portlet-body form">
+                            <div class="alert alert-success" ng-if="message">
+                                Contact Updated Successfully
+                            </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
